# mlops

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: aidan.yml  main.yml  predict_price.yml  tests.yml
aidan_data_parsing/: README.md  parse_latest_exports_csv.py  parse_one_pending_row.py
docs/: deployment_milestone_submission.md
ebay_historical_clothing_scraper/: .gitignore  README.md
ebay_historical_clothing_scraper/data/: brands.csv
ebay_historical_clothing_scraper/data/exports/: ebay_historical_20260406_140041.csv  ebay_historical_20260406_144143.csv  ebay_historical_20260407_085748.csv
ebay_historical_clothing_scraper/data/processed/: ebay_historical_cleaned.parquet
ebay_historical_clothing_scraper/src/ebay_scraper/: runner.py
scripts/: check_vertex_pricing.py  clean_ebay_exports.py  estimate_original_price_from_mongo.py  extract_features_from_mongo.py  train_placeholder.py  train_price_rf.py
scripts/outputs/: mongo_llm_features.jsonl
src/clothing_mlops/: data_pipeline.py  modeling.py  service.py  vertex_pricing.py
tests/: test_modeling.py  test_service.py  test_ui_integration.py  test_vertex_pricing.py
